# distcloud

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  CONTRIBUTORS.wrs  HACKING.rst  MANIFEST.in  README_DC  centos_iso_image.inc  centos_stable_wheels.inc  debian_bullseye_iso_image_std.inc  debian_bullseye_pkg_dirs_std  debian_iso_image.inc  debian_pkg_dirs  requirements.txt  setup.cfg  setup.py  setup_ddt_tests.py  test-requirements.txt  tox.ini
distributedcloud/: .coveragerc  .coveragerc_xml  .pylintrc  .testr.conf  MANIFEST.in  README.rst  pylint.rc  requirements.txt  run_black.py  setup.cfg  setup.py  test-requirements-debian.txt  test-requirements.txt  tox.ini  trixie-upper-constraints.txt  upper-constraints.txt
distributedcloud/centos/: build_srpm.data  distributedcloud.spec  stx-keystone-api-proxy.dev_docker_image  stx-keystone-api-proxy.stable_docker_image
distributedcloud/centos/files/: dcdbsync-api.service  dcdbsync-openstack-api.service  dcdbsync.conf  dcmanager-api.service  dcmanager-manager.service  dcorch-api.service  dcorch-nova-api-proxy.service  dcorch-snmp.service  distcloud-logrotate.conf  distcloud-syslog.conf
distributedcloud/dcagent/: __init__.py  config-generator.conf
distributedcloud/dcagent/api/: api_config.py  app.py  policy.py
distributedcloud/dcagent/cmd/: audit.py
distributedcloud/dcagent/common/: audit_manager.py  config.py  context.py  exceptions.py  i18n.py  utils.py  version.py
distributedcloud/dcagent/tests/: base.py
distributedcloud/dccertmon/: __init__.py  config-generator.conf
distributedcloud/dccertmon/cmd/: cert_mon.py
distributedcloud/dccertmon/common/: certificate_monitor_manager.py  config.py  constants.py  keystone_objects.py  service.py  subcloud_audit_queue.py  utils.py  watcher.py
distributedcloud/dccertmon/tests/: base.py
distributedcloud/dccommon/: __init__.py  consts.py  endpoint_cache.py  exceptions.py  install_consts.py  kubeoperator.py  ostree_mount.py  rvmc.py  subcloud_enrollment.py  subcloud_install.py  subprocess_cleanup.py  utils.py
distributedcloud/dccommon/drivers/: base.py
distributedcloud/dccommon/tests/: base.py  utils.py
distributedcloud/dcdbsync/: __init__.py  config-generator.conf  version.py
distributedcloud/dcdbsync/api/: api_config.py  app.py  enforcer.py  policy.py
distributedcloud/dcdbsync/cmd/: api.py
distributedcloud/dcdbsync/common/: config.py  context.py  exceptions.py  i18n.py  messaging.py  policy.py  version.py
distributedcloud/dcdbsync/dbsyncclient/: base.py  client.py  exceptions.py  httpclient.py
distributedcloud/dcmanager/: __init__.py  version.py
distributedcloud/dcmanager/api/: api_config.py  app.py  enforcer.py  policy.py
distributedcloud/dcmanager/audit/: alarm_aggregation.py  auditor.py  base_audit.py  firmware_audit.py  kube_rootca_update_audit.py  kubernetes_audit.py  patch_audit.py  rpcapi.py  service.py  software_audit.py  subcloud_audit_manager.py  subcloud_audit_worker_manager.py  utils.py
distributedcloud/dcmanager/cmd/: README.rst  api.py  audit.py  audit_worker.py  manage.py  manager.py  orchestrator.py  orchestrator_worker.py  state.py
distributedcloud/dcmanager/common/: config.py  consts.py  context.py  exceptions.py  i18n.py  install_consts.py  manager.py  messaging.py  phased_subcloud_deploy.py  policy.py  (+5 more)
distributedcloud/dcorch/: __init__.py  config-generator.conf  version.py
distributedcloud/debian/: dl_hook  meta_data.yaml  stx-keystone-api-proxy.dev_docker_image  stx-keystone-api-proxy.stable_docker_image
distributedcloud/files/: clean-dcorch  dc-auto-restore.service  dcagent-api.service  dcagent.conf  dccertmon.conf  dcmanager-audit-worker.service  dcmanager-audit.service  dcmanager-orchestrator-worker.service  dcmanager-orchestrator.service  dcmanager.conf  dcorch-cinder-api-proxy.service  dcorch-engine-worker.service  dcorch-engine.service  dcorch-identity-api-proxy.service  dcorch-neutron-api-proxy.service  dcorch-sysinv-api-proxy.service  dcorch.conf  distcloud-logrotate.conf  distcloud-syslog.conf
distributedcloud/ocf/: dcagent-api  dccertmon  dcdbsync-api  dcmanager-api  dcmanager-audit  dcmanager-audit-worker  dcmanager-manager  dcmanager-orchestrator  dcmanager-orchestrator-worker  dcmanager-state  dcorch-engine  dcorch-engine-worker  dcorch-identity-api-proxy  dcorch-patch-api-proxy  dcorch-snmp  dcorch-sysinv-api-proxy  dcorch-usm-api-proxy
distributedcloud/scripts/: dc_script_common.py  execute-restore.sh  ipmi_sel_event_monitor.py  post_clone_identity_reset.py  rvmc_install.py  update_region_name.py
(+943 files in other folders)
