[metadata]
name = distributedcloud
summary = Distributed Cloud
description-file =
    README.rst
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: StarlingX
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
     dccommon
     dcmanager
     dcorch
     dcdbsync
     dcagent
     dccertmon

[entry_points]
console_scripts =
    dcmanager-api = dcmanager.cmd.api:main
    dcmanager-audit = dcmanager.cmd.audit:main
    dcmanager-audit-worker = dcmanager.cmd.audit_worker:main
    dcmanager-orchestrator = dcmanager.cmd.orchestrator:main
    dcmanager-orchestrator-worker = dcmanager.cmd.orchestrator_worker:main
    dcmanager-manager = dcmanager.cmd.manager:main
    dcmanager-manage = dcmanager.cmd.manage:main
    dcmanager-state = dcmanager.cmd.state:main
    dcorch-api = dcorch.cmd.api:main
    dcorch-engine = dcorch.cmd.engine:main
    dcorch-engine-worker = dcorch.cmd.engine_worker:main
    dcorch-manage = dcorch.cmd.manage:main
    dcorch-api-proxy = dcorch.cmd.api_proxy:main
    dcdbsync-api = dcdbsync.cmd.api:main
    dcagent-api = dcagent.cmd.audit:main
    dccertmon = dccertmon.cmd.cert_mon:main

oslo.config.opts =
    dccertmon.cmd.cert_mon.config = dccertmon.common.config:list_opts
    dcagent.common.config = dcagent.common.config:list_opts
    dcagent.common.api.api_config = dcagent.api.api_config:list_opts
    dcorch.common.config = dcorch.common.config:list_opts
    dcorch.common.api.api_config = dcorch.api.api_config:list_opts
    dcorch.engine.quota_manager = dcorch.engine.quota_manager:list_opts
    dcmanager.common.config = dcmanager.common.config:list_opts
    dcmanager.common.api.api_config = dcmanager.api.api_config:list_opts
    dcdbsync.common.config = dcdbsync.common.config:list_opts
    dcdbsync.common.api.api_config = dcdbsync.api.api_config:list_opts

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = dcmanager/locale/dcmanager.pot
